_build/default/netlist_simulator/netlist_parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On INPUT shift to state 1
-- On program shift to state 72
## Reductions:

State 1:
## Known stack suffix:
## INPUT
## LR(1) items:
program -> INPUT . loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF [ # ]
## Transitions:
-- On NAME shift to state 2
-- On separated_nonempty_list(COMMA,NAME) shift to state 5
-- On loption(separated_nonempty_list(COMMA,NAME)) shift to state 6
## Reductions:
-- On OUTPUT
--   reduce production loption(separated_nonempty_list(COMMA,NAME)) ->

State 2:
## Known stack suffix:
## NAME
## LR(1) items:
separated_nonempty_list(COMMA,NAME) -> NAME . [ VAR OUTPUT ]
separated_nonempty_list(COMMA,NAME) -> NAME . COMMA separated_nonempty_list(COMMA,NAME) [ VAR OUTPUT ]
## Transitions:
-- On COMMA shift to state 3
## Reductions:
-- On VAR OUTPUT
--   reduce production separated_nonempty_list(COMMA,NAME) -> NAME

State 3:
## Known stack suffix:
## NAME COMMA
## LR(1) items:
separated_nonempty_list(COMMA,NAME) -> NAME COMMA . separated_nonempty_list(COMMA,NAME) [ VAR OUTPUT ]
## Transitions:
-- On NAME shift to state 2
-- On separated_nonempty_list(COMMA,NAME) shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## NAME COMMA separated_nonempty_list(COMMA,NAME)
## LR(1) items:
separated_nonempty_list(COMMA,NAME) -> NAME COMMA separated_nonempty_list(COMMA,NAME) . [ VAR OUTPUT ]
## Transitions:
## Reductions:
-- On VAR OUTPUT
--   reduce production separated_nonempty_list(COMMA,NAME) -> NAME COMMA separated_nonempty_list(COMMA,NAME)

State 5:
## Known stack suffix:
## separated_nonempty_list(COMMA,NAME)
## LR(1) items:
loption(separated_nonempty_list(COMMA,NAME)) -> separated_nonempty_list(COMMA,NAME) . [ VAR OUTPUT ]
## Transitions:
## Reductions:
-- On VAR OUTPUT
--   reduce production loption(separated_nonempty_list(COMMA,NAME)) -> separated_nonempty_list(COMMA,NAME)

State 6:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME))
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) . OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF [ # ]
## Transitions:
-- On OUTPUT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT . loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF [ # ]
## Transitions:
-- On NAME shift to state 2
-- On separated_nonempty_list(COMMA,NAME) shift to state 5
-- On loption(separated_nonempty_list(COMMA,NAME)) shift to state 8
## Reductions:
-- On VAR
--   reduce production loption(separated_nonempty_list(COMMA,NAME)) ->

State 8:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME))
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) . VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF [ # ]
## Transitions:
-- On VAR shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR . loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF [ # ]
## Transitions:
-- On NAME shift to state 10
-- On var shift to state 15
-- On separated_nonempty_list(COMMA,var) shift to state 18
-- On loption(separated_nonempty_list(COMMA,var)) shift to state 19
## Reductions:
-- On IN
--   reduce production loption(separated_nonempty_list(COMMA,var)) ->

State 10:
## Known stack suffix:
## NAME
## LR(1) items:
var -> NAME . ty_exp [ IN COMMA ]
## Transitions:
-- On COLON shift to state 11
-- On ty_exp shift to state 14
## Reductions:
-- On IN COMMA
--   reduce production ty_exp ->

State 11:
## Known stack suffix:
## COLON
## LR(1) items:
ty_exp -> COLON . int [ IN COMMA ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 13
## Reductions:

State 12:
## Known stack suffix:
## CONST
## LR(1) items:
int -> CONST . [ NAME IN CONST COMMA ]
## Transitions:
## Reductions:
-- On NAME IN CONST COMMA
--   reduce production int -> CONST

State 13:
## Known stack suffix:
## COLON int
## LR(1) items:
ty_exp -> COLON int . [ IN COMMA ]
## Transitions:
## Reductions:
-- On IN COMMA
--   reduce production ty_exp -> COLON int

State 14:
## Known stack suffix:
## NAME ty_exp
## LR(1) items:
var -> NAME ty_exp . [ IN COMMA ]
## Transitions:
## Reductions:
-- On IN COMMA
--   reduce production var -> NAME ty_exp

State 15:
## Known stack suffix:
## var
## LR(1) items:
separated_nonempty_list(COMMA,var) -> var . [ IN ]
separated_nonempty_list(COMMA,var) -> var . COMMA separated_nonempty_list(COMMA,var) [ IN ]
## Transitions:
-- On COMMA shift to state 16
## Reductions:
-- On IN
--   reduce production separated_nonempty_list(COMMA,var) -> var

State 16:
## Known stack suffix:
## var COMMA
## LR(1) items:
separated_nonempty_list(COMMA,var) -> var COMMA . separated_nonempty_list(COMMA,var) [ IN ]
## Transitions:
-- On NAME shift to state 10
-- On var shift to state 15
-- On separated_nonempty_list(COMMA,var) shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## var COMMA separated_nonempty_list(COMMA,var)
## LR(1) items:
separated_nonempty_list(COMMA,var) -> var COMMA separated_nonempty_list(COMMA,var) . [ IN ]
## Transitions:
## Reductions:
-- On IN
--   reduce production separated_nonempty_list(COMMA,var) -> var COMMA separated_nonempty_list(COMMA,var)

State 18:
## Known stack suffix:
## separated_nonempty_list(COMMA,var)
## LR(1) items:
loption(separated_nonempty_list(COMMA,var)) -> separated_nonempty_list(COMMA,var) . [ IN ]
## Transitions:
## Reductions:
-- On IN
--   reduce production loption(separated_nonempty_list(COMMA,var)) -> separated_nonempty_list(COMMA,var)

State 19:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var))
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) . IN list(equ) EOF [ # ]
## Transitions:
-- On IN shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN . list(equ) EOF [ # ]
## Transitions:
-- On NAME shift to state 21
-- On list(equ) shift to state 68
-- On equ shift to state 70
## Reductions:
-- On EOF
--   reduce production list(equ) ->

State 21:
## Known stack suffix:
## NAME
## LR(1) items:
equ -> NAME . EQUAL exp [ NAME EOF ]
## Transitions:
-- On EQUAL shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## NAME EQUAL
## LR(1) items:
equ -> NAME EQUAL . exp [ NAME EOF ]
## Transitions:
-- On XOR shift to state 23
-- On SLICE shift to state 28
-- On SELECT shift to state 32
-- On ROM shift to state 35
-- On REG shift to state 39
-- On RAM shift to state 41
-- On OR shift to state 48
-- On NOT shift to state 51
-- On NAND shift to state 53
-- On NAME shift to state 24
-- On MUX shift to state 56
-- On CONST shift to state 25
-- On CONCAT shift to state 60
-- On AND shift to state 63
-- On exp shift to state 66
-- On arg shift to state 67
## Reductions:

State 23:
## Known stack suffix:
## XOR
## LR(1) items:
exp -> XOR . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 26
## Reductions:

State 24:
## Known stack suffix:
## NAME
## LR(1) items:
arg -> NAME . [ NAME EOF CONST ]
## Transitions:
## Reductions:
-- On NAME EOF CONST
--   reduce production arg -> NAME

State 25:
## Known stack suffix:
## CONST
## LR(1) items:
arg -> CONST . [ NAME EOF CONST ]
## Transitions:
## Reductions:
-- On NAME EOF CONST
--   reduce production arg -> CONST

State 26:
## Known stack suffix:
## XOR arg
## LR(1) items:
exp -> XOR arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## XOR arg arg
## LR(1) items:
exp -> XOR arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> XOR arg arg

State 28:
## Known stack suffix:
## SLICE
## LR(1) items:
exp -> SLICE . int int arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## SLICE int
## LR(1) items:
exp -> SLICE int . int arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## SLICE int int
## LR(1) items:
exp -> SLICE int int . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## SLICE int int arg
## LR(1) items:
exp -> SLICE int int arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> SLICE int int arg

State 32:
## Known stack suffix:
## SELECT
## LR(1) items:
exp -> SELECT . int arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## SELECT int
## LR(1) items:
exp -> SELECT int . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## SELECT int arg
## LR(1) items:
exp -> SELECT int arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> SELECT int arg

State 35:
## Known stack suffix:
## ROM
## LR(1) items:
exp -> ROM . int int arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 36
## Reductions:

State 36:
## Known stack suffix:
## ROM int
## LR(1) items:
exp -> ROM int . int arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## ROM int int
## LR(1) items:
exp -> ROM int int . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## ROM int int arg
## LR(1) items:
exp -> ROM int int arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> ROM int int arg

State 39:
## Known stack suffix:
## REG
## LR(1) items:
exp -> REG . NAME [ NAME EOF ]
## Transitions:
-- On NAME shift to state 40
## Reductions:

State 40:
## Known stack suffix:
## REG NAME
## LR(1) items:
exp -> REG NAME . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> REG NAME

State 41:
## Known stack suffix:
## RAM
## LR(1) items:
exp -> RAM . int int arg arg arg arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## RAM int
## LR(1) items:
exp -> RAM int . int arg arg arg arg [ NAME EOF ]
## Transitions:
-- On CONST shift to state 12
-- On int shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## RAM int int
## LR(1) items:
exp -> RAM int int . arg arg arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 44
## Reductions:

State 44:
## Known stack suffix:
## RAM int int arg
## LR(1) items:
exp -> RAM int int arg . arg arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 45
## Reductions:

State 45:
## Known stack suffix:
## RAM int int arg arg
## LR(1) items:
exp -> RAM int int arg arg . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 46
## Reductions:

State 46:
## Known stack suffix:
## RAM int int arg arg arg
## LR(1) items:
exp -> RAM int int arg arg arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 47
## Reductions:

State 47:
## Known stack suffix:
## RAM int int arg arg arg arg
## LR(1) items:
exp -> RAM int int arg arg arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> RAM int int arg arg arg arg

State 48:
## Known stack suffix:
## OR
## LR(1) items:
exp -> OR . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 49
## Reductions:

State 49:
## Known stack suffix:
## OR arg
## LR(1) items:
exp -> OR arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 50
## Reductions:

State 50:
## Known stack suffix:
## OR arg arg
## LR(1) items:
exp -> OR arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> OR arg arg

State 51:
## Known stack suffix:
## NOT
## LR(1) items:
exp -> NOT . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## NOT arg
## LR(1) items:
exp -> NOT arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> NOT arg

State 53:
## Known stack suffix:
## NAND
## LR(1) items:
exp -> NAND . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 54
## Reductions:

State 54:
## Known stack suffix:
## NAND arg
## LR(1) items:
exp -> NAND arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 55
## Reductions:

State 55:
## Known stack suffix:
## NAND arg arg
## LR(1) items:
exp -> NAND arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> NAND arg arg

State 56:
## Known stack suffix:
## MUX
## LR(1) items:
exp -> MUX . arg arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 57
## Reductions:

State 57:
## Known stack suffix:
## MUX arg
## LR(1) items:
exp -> MUX arg . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 58
## Reductions:

State 58:
## Known stack suffix:
## MUX arg arg
## LR(1) items:
exp -> MUX arg arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 59
## Reductions:

State 59:
## Known stack suffix:
## MUX arg arg arg
## LR(1) items:
exp -> MUX arg arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> MUX arg arg arg

State 60:
## Known stack suffix:
## CONCAT
## LR(1) items:
exp -> CONCAT . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 61
## Reductions:

State 61:
## Known stack suffix:
## CONCAT arg
## LR(1) items:
exp -> CONCAT arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 62
## Reductions:

State 62:
## Known stack suffix:
## CONCAT arg arg
## LR(1) items:
exp -> CONCAT arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> CONCAT arg arg

State 63:
## Known stack suffix:
## AND
## LR(1) items:
exp -> AND . arg arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 64
## Reductions:

State 64:
## Known stack suffix:
## AND arg
## LR(1) items:
exp -> AND arg . arg [ NAME EOF ]
## Transitions:
-- On NAME shift to state 24
-- On CONST shift to state 25
-- On arg shift to state 65
## Reductions:

State 65:
## Known stack suffix:
## AND arg arg
## LR(1) items:
exp -> AND arg arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> AND arg arg

State 66:
## Known stack suffix:
## NAME EQUAL exp
## LR(1) items:
equ -> NAME EQUAL exp . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production equ -> NAME EQUAL exp

State 67:
## Known stack suffix:
## arg
## LR(1) items:
exp -> arg . [ NAME EOF ]
## Transitions:
## Reductions:
-- On NAME EOF
--   reduce production exp -> arg

State 68:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ)
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) . EOF [ # ]
## Transitions:
-- On EOF shift to state 69
## Reductions:

State 69:
## Known stack suffix:
## INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF
## LR(1) items:
program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> INPUT loption(separated_nonempty_list(COMMA,NAME)) OUTPUT loption(separated_nonempty_list(COMMA,NAME)) VAR loption(separated_nonempty_list(COMMA,var)) IN list(equ) EOF

State 70:
## Known stack suffix:
## equ
## LR(1) items:
list(equ) -> equ . list(equ) [ EOF ]
## Transitions:
-- On NAME shift to state 21
-- On list(equ) shift to state 71
-- On equ shift to state 70
## Reductions:
-- On EOF
--   reduce production list(equ) ->

State 71:
## Known stack suffix:
## equ list(equ)
## LR(1) items:
list(equ) -> equ list(equ) . [ EOF ]
## Transitions:
## Reductions:
-- On EOF
--   reduce production list(equ) -> equ list(equ)

State 72:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

